# string-utilities

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  string_utils.hpp
tests/: CMakeLists.txt  string_utils.test.cpp
